syntax = "proto3";

package max;

option go_package = "github.com/mbcarruthers/gRPCmax/max/proto";

message MaxRequest {
  int64 max_req = 1;
}

message MaxResponse {
  int64 max_res = 1;
}


service MaxService {
  rpc Max(stream MaxRequest) returns (stream MaxResponse);
}